@@ -21,6 +21,9 @@
    - djm@cvs.openbsd.org 2004/06/21 17:53:03
      [session.c]
      fix fd leak for multiple subsystem connections; with markus@
+   - djm@cvs.openbsd.org 2004/06/21 22:02:58
+     [log.h]
+     mark fatal and cleanup exit as __dead; ok markus@
 
 20040620
  - (tim) [configure.ac Makefile.in] Only change TEST_SHELL on broken platforms.
@@ -1343,4 +1346,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3422 2004/06/22 02:57:08 dtucker Exp $
+$Id: ChangeLog,v 1.3423 2004/06/22 02:57:44 dtucker Exp $
